# obs-beauty-filter

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
data/: beauty.effect
data/locale/: zh-CN.ini
docs/: ACCEPTANCE_EVIDENCE_TEMPLATE.md  COMPATIBILITY.md  DELIVERY_STATUS.md  DEVELOPMENT_PLAN.md  MACOS_TEST_EVIDENCE.md  OBS_BEAUTY_PLUGIN_DEV_SPEC.md  OBS_SCENE_VALIDATION.md  THIRD_PARTY.md  USER_GUIDE.md
models/: face_landmarker.json
scripts/: build-mediapipe-macos-arm64.zsh  build-mediapipe-windows-x64.ps1  fetch-models.ps1  fetch-models.zsh  package-macos-arm64.zsh  package-windows-x64.ps1  verify-macos-p1-install.zsh
src/: beauty_preset.c  beauty_preset.h  beauty_sampling.c  beauty_sampling.h  beauty_settings_migration.c  beauty_settings_migration.h  face_frame_bridge.c  face_frame_bridge.h  face_inference.h  face_inference_worker.cpp  face_inference_worker.h  face_landmarks.c  face_landmarks.h  face_tracker.c  face_tracker.h  mediapipe_face_landmarker.cpp  obs-beauty-filter.c
tests/: beauty_preset_test.c  beauty_sampling_test.c  beauty_settings_migration_test.c  face_inference_worker_test.cpp  face_landmarks_test.c  face_tracker_test.c  mediapipe_face_inference_test.cpp  obs_module_smoke_test.c
